# NVIDIA_SGEMM_PRACTICE

./: CMakeLists.txt  README.md  plot.py  run.sh  sgemm  sgemm.cu
images/: head.psd
src/: kernel.cuh  utils.cu  utils.cuh
src/kernel/: kernel_1.cuh  kernel_2.cuh  kernel_3.cuh  kernel_4.cuh  kernel_5.cuh  kernel_6.cuh  kernel_7.cuh
test/: test_kernel_0.txt  test_kernel_1.txt  test_kernel_2.txt  test_kernel_3.txt  test_kernel_4.txt  test_kernel_5.txt  test_kernel_6.txt  test_kernel_7.txt
